tests/NormalTests/paczka1/small_fuzzy/99623338.err
Error in line 3: ZWh S607 74,3
Error in line 4: ZWh S692 41,6
